style.css
#hero-content{
    width: 600px;
    background-color: rgba(51, 47, 47, 0.8);
    border-radius: 8px;
    box-shadow: 2px 4px 8px rgb(68, 67, 67);
    text-align: center;
    padding: 50px 0;
    margin: 0 auto;
    position: relative;
    top: 200px;
}

#hero-content h1{
    color: white;
    text-transform: uppercase;
    font-size: 40px;
    font-family: Raleway, sans-serif;
    margin: 0px;
}

#hero-content p{
    color: white;
    text-transform: uppercase;
    font-weight: 300;
}

#hero-content a{
    background-color: rgb(255, 251, 0);
    text-decoration: none;
    color: black;
    padding: 5px 15px;
    border-radius: 8px;
}

#hero-content a:hover{
    background-color: rgb(255, 238, 0);
}

#destinations{
    display: flex;
    width: 90%;
    margin: 0 auto 40px;
    justify-content: space-evenly;
}

/* .destination img{
    height: 200px;
    width: 100%;
} */

.destination {
    margin: 0 20px;
  }

.destination img {
    height: 200px;
    width: 100%;
    box-shadow: 2px 4px 8px rgb(68, 67, 67);
    border-radius: 10px;
    object-fit: cover;
  }

